fixed footer spacing

--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ h2 {
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+  margin-bottom: 40px;
   width: 90%;
   max-width: 700px;
   height: auto;
